--- a/lib/gvc/Makefile.am
+++ b/lib/gvc/Makefile.am
@@ -68,6 +68,6 @@ libgvc_builtins_la_LIBADD = $(libgvc_la_LIBADD)
 gvc.3.pdf: $(srcdir)/gvc.3
 	- @GROFF@ -Tps -man $(srcdir)/gvc.3 | @PS2PDF@ - - > gvc.3.pdf
 
-EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old regex_win32.h regex_win32.c
+EXTRA_DIST = $(man_MANS) $(pdf_DATA) Makefile.old regex_win32.h regex_win32.c plugins.tcl
 
 DISTCLEANFILES = $(pdf_DATA)
