--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,8 +1,9 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = cdt graph gd pathplan sfio vmalloc ast vpsc rbtree inkpot \
+SUBDIRS = cdt graph gd pathplan sfio vmalloc ast vpsc rbtree \
 	circogen dotgen fdpgen neatogen twopigen sparse sfdpgen \
-	patchwork common pack gvc ingraphs expr cgraph xdot topfish glcomp
+	patchwork inkpot common pack gvc ingraphs expr cgraph \
+	xdot topfish glcomp
 
 EXTRA_DIST = Makefile.old
