--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -193,7 +193,7 @@ BuildRequires: gd gd-devel perl-devel DevIL-devel lasi-devel
 %endif
 %if %fedora >= 8
 %define R_LANG 1
-BuildRequires: R-devel swig >= 1.3.33
+BuildRequires: R-devel swig >= 1.3.33 ghostscript-devel
 #
 # packaging is ok, but code is not ready for distribution
 #
@@ -203,6 +203,8 @@ BuildRequires: R-devel swig >= 1.3.33
 # BuildRequires: glitz-devel
 %endif
 %if %fedora >= 9
+BuildRequires: ghostscript-devel
+%define GS 1
 #define MING 1
 #BuildRequires: ming ming-devel
 %endif
@@ -267,6 +269,8 @@ BuildRequires: R-devel swig >= 1.3.33
 # BuildRequires: glitz-devel
 %endif
 %if %att_fedora >= 9
+BuildRequires: ghostscript-devel
+%define GS 1
 #define MING 1
 #BuildRequires: ming ming-devel
 %endif
