--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,9 +1,13 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = cdt graph gd pathplan sfio vmalloc ast vpsc rbtree \
-	circogen dotgen fdpgen neatogen twopigen sparse sfdpgen \
-	patchwork inkpot common pack gvc ingraphs expr cgraph \
-	xdot topfish glcomp
+GRAPH_DIRS = circogen common dotgen fdpgen neatogen twopigen
+
+CGRAPH_DIRS = circogen_cgraph common_cgraph dotgen_cgraph \
+	fdpgen_cgraph neatogen_cgraph twopigen_cgraph
+
+SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast vpsc \
+	rbtree sparse sfdpgen patchwork inkpot expr gvc xdot \
+	pack ingraphs topfish glcomp $(GRAPH_DIRS) $(CGRAPH_DIRS)
 
 EXTRA_DIST = Makefile.old
