--- a/lib/twopigen/Makefile.am
+++ b/lib/twopigen/Makefile.am
@@ -11,8 +11,11 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/graph \
 	-I$(top_srcdir)/lib/cdt
 
+if WITH_CGRAPH
+else
 noinst_HEADERS = circle.h
 noinst_LTLIBRARIES = libtwopigen_C.la
+endif
 
 libtwopigen_C_la_SOURCES = twopiinit.c circle.c
 
