--- a/plugin/dot_layout/Makefile.am
+++ b/plugin/dot_layout/Makefile.am
@@ -1,12 +1,20 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
+if WITH_CGRAPH
+GRAPH = cgraph
+COMMON = common_cgraph
+else
+GRAPH = graph
+COMMON = common
+endif
+
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
-	-I$(top_srcdir)/lib/common \
+	-I$(top_srcdir)/lib/$(COMMON) \
 	-I$(top_srcdir)/lib/pathplan \
 	-I$(top_srcdir)/lib/gvc \
-	-I$(top_srcdir)/lib/graph \
+	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt \
 	$(LIBGVC_CFLAGS)
 
@@ -24,17 +32,17 @@ libgvplugin_dot_layout_C_la_SOURCES = \
 libgvplugin_dot_layout_C_la_LIBADD = \
 	$(top_builddir)/lib/dotgen/libdotgen_C.la
 
-libgvplugin_dot_layout_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
+libgvplugin_dot_layout_la_LDFLAGS = -version-info $(GVPLUGIN_VERSION_INFO)
 libgvplugin_dot_layout_la_SOURCES = $(libgvplugin_dot_layout_C_la_SOURCES)
 libgvplugin_dot_layout_la_LIBADD = $(libgvplugin_dot_layout_C_la_LIBADD) \
 	$(top_builddir)/lib/gvc/libgvc.la \
-	$(top_builddir)/lib/graph/libgraph.la \
+	$(top_builddir)/lib/$(GRAPH)/lib$(GRAPH).la \
 	$(top_builddir)/lib/cdt/libcdt.la \
-	$(top_builddir)/lib/pathplan/libpathplan.la @MATH_LIBS@
+	$(top_builddir)/lib/pathplan/libpathplan.la $(MATH_LIBS)
 	
 if WITH_WIN32
 libgvplugin_dot_layout_la_LDFLAGS += -no-undefined
-libgvplugin_dot_layout_la_LIBADD += $(top_builddir)/lib/graph/libgraph.la
+libgvplugin_dot_layout_la_LIBADD += $(top_builddir)/lib/$(GRAPH)/lib$(GRAPH).la
 endif
 
 if WITH_DARWIN9
