--- a/lib/patchwork/Makefile.am
+++ b/lib/patchwork/Makefile.am
@@ -1,18 +1,34 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
+if WITH_CGRAPH
+GRAPH = cgraph
+COMMON = common_cgraph
+NEATOGEN = neatogen_cgraph
+FDPGEN = fdpgen_cgraph
+else
+GRAPH = graph
+COMMON = common
+NEATOGEN = neatogen
+FDPGEN = fdpgen
+endif
+
 AM_CPPFLAGS = \
         -I$(top_srcdir) \
-        -I$(top_srcdir)/lib/common \
+        -I$(top_srcdir)/lib/$(COMMON) \
 	-I$(top_srcdir)/lib/gvc \
-	-I$(top_srcdir)/lib/neatogen \
+	-I$(top_srcdir)/lib/$(NEATOGEN) \
+	-I$(top_srcdir)/lib/$(FDPGEN) \
 	-I$(top_srcdir)/lib/pack \
 	-I$(top_srcdir)/lib/pathplan \
-	-I$(top_srcdir)/lib/graph \
+	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt
 
+if WITH_CGRAPH
+else
 noinst_HEADERS = patchwork.h
 noinst_LTLIBRARIES = libpatchwork_C.la
+endif
 
 libpatchwork_C_la_SOURCES = patchwork.c patchworkinit.c
 
