--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,13 +1,13 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-GRAPH_DIRS = circogen common dotgen fdpgen neatogen twopigen
+GRAPH_DIRS = circogen dotgen fdpgen neatogen twopigen
 
-CGRAPH_DIRS = circogen_cgraph common_cgraph dotgen_cgraph \
+CGRAPH_DIRS = circogen_cgraph dotgen_cgraph \
 	fdpgen_cgraph neatogen_cgraph twopigen_cgraph
 
 SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast vpsc \
-	rbtree sparse sfdpgen patchwork inkpot expr pack gvc \
-	xdot ingraphs topfish glcomp $(GRAPH_DIRS) $(CGRAPH_DIRS)
+	rbtree sparse sfdpgen patchwork inkpot expr common \
+	pack gvc xdot ingraphs topfish glcomp $(GRAPH_DIRS) $(CGRAPH_DIRS)
 
 EXTRA_DIST = Makefile.old
