--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -27,9 +27,9 @@ endif
 smyrna_SOURCES = btree.c draw.c filter.c glexpose.c glmotion.c gltemplate.c \
 	hier.c main.c selection.c support.c template.c topview.c topviewdata.c \
 	topfisheyeview.c trackball.c tvnodes.c viewport.c viewportcamera.c \
-	gui/callbacks.c gui/datalistcallbacks.c gui/filterscallbacks.c \
-	gui/glmenu.c gui/gui.c gui/menucallbacks.c gui/toolboxcallbacks.c \
-	gui/topviewsettings.c
+    gui/beacon.c gui/callbacks.c gui/datalistcallbacks.c \
+    gui/filterscallbacks.c gui/glmenu.c gui/gui.c gui/menucallbacks.c \
+    gui/toolboxcallbacks.c gui/topviewsettings.c
 
 smyrna_LDADD = $(top_builddir)/lib/cgraph/libcgraph_C.la \
 		$(top_builddir)/lib/cdt/libcdt_C.la \
