fixes for VERSION_DATE and --with-ghostscript

--- a/configure.ac
+++ b/configure.ac
@@ -1838,20 +1838,20 @@ fi
 AM_CONDITIONAL(WITH_RSVG, [test "x$use_rsvg" = "xYes"])
 
 dnl -----------------------------------
-dnl INCLUDES and LIBS for GS
+dnl INCLUDES and LIBS for GHOSTSCRIPT
                                                                                 
-AC_ARG_WITH(gs,
-  [AC_HELP_STRING([--with-gs=yes], [gs library])],
-  [], [with_gs=yes])
+AC_ARG_WITH(ghostscript,
+  [AC_HELP_STRING([--with-ghostscript=yes], [ghostscript library])],
+  [], [with_ghostscript=yes])
 
-if test "x$with_gs" != "xyes"; then
-  use_gs="No (disabled)"
+if test "x$with_ghostscript" != "xyes"; then
+  use_ghostscript="No (disabled)"
 else
-  AC_CHECK_HEADER(ghostscript/iapi.h, GS_CFLAGS="",use_gs="No (missing headers)")
-  if test "x$use_gs" = "x"; then
-    AC_CHECK_LIB(gs, main, GS_LIBS="-lgs", use_gs="No (missing lib)")
-    if test "x$use_gs" = "x"; then
-      use_gs="Yes"
+  AC_CHECK_HEADER(ghostscript/iapi.h, GS_CFLAGS="",use_ghostscript="No (missing headers)")
+  if test "x$use_ghostscript" = "x"; then
+    AC_CHECK_LIB(gs, main, GS_LIBS="-lgs", use_ghostscript="No (missing lib)")
+    if test "x$use_ghostscript" = "x"; then
+      use_ghostscript="Yes"
       AC_DEFINE_UNQUOTED(HAVE_GS,1,
         [Define if you have the gs library])
       AC_SUBST(GS_CFLAGS)
@@ -1859,7 +1859,7 @@ else
     fi
   fi
 fi
-AM_CONDITIONAL(WITH_GS, [test "x$use_gs" = "xYes"])
+AM_CONDITIONAL(WITH_GS, [test "x$use_ghostscript" = "xYes"])
 
 dnl -----------------------------------
 dnl INCLUDES and LIBS for PANGO, CAIRO et.al.
@@ -3068,8 +3068,8 @@ echo "  devil:         $use_devil"
 echo "  gd:            $use_gd"
 echo "  gdiplus:       $use_gdiplus"
 echo "  gdk_pixbuf:    $use_gdk_pixbuf"
+echo "  ghostscript:   $use_ghostscript"
 echo "  glitz:         $use_glitz"
-echo "  gs:            $use_gs"
 echo "  gtk:           $use_gtk"
 echo "  lasi:          $use_lasi"
 echo "  ming:          $use_ming"
