--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -30,7 +30,7 @@ Prefix: /usr
 # All features are off (undefined) by default
 # To enable, use: <percent>define FEATURE 1
 # Available features are:
-#    SHARP GUILE _IO JAVA LUA OCAML PERL PHP PYTHON RUBY R_LANG
+#    SHARP GHOSTSCRIPT GUILE _IO JAVA LUA OCAML PERL PHP PYTHON RUBY R_LANG
 #    TCL IPSEPCOLA MYLIBGD PANGOCAIRO RSVG GLITZ SMYRNA DEVIL MING GDK_PIXBUF
 
 # SuSE uses a different mechanism to generate BuildRequires
@@ -204,7 +204,7 @@ BuildRequires: R-devel swig >= 1.3.33
 %endif
 %if %fedora >= 9
 BuildRequires: ghostscript-devel
-%define GS 1
+%define GHOSTSCRIPT 1
 #define MING 1
 #BuildRequires: ming ming-devel
 %endif
@@ -270,7 +270,7 @@ BuildRequires: R-devel swig >= 1.3.33
 %endif
 %if %att_fedora >= 9
 BuildRequires: ghostscript-devel
-%define GS 1
+%define GHOSTSCRIPT 1
 #define MING 1
 #BuildRequires: ming ming-devel
 %endif
@@ -688,15 +688,16 @@ CFLAGS="$RPM_OPT_FLAGS" \
 	--enable-ruby%{!?RUBY:=no} \
 	--enable-tcl%{!?TCL:=no} \
 	--with%{!?DEVIL:out}-devil \
+	--with%{!?GDK_PIXBUF:out}-gdk-pixbuf \
+	--with%{!?GHOSTSCRIPT:out}-ghostscript \
+	--with%{!?GLITZ:out}-glitz \
 	--with%{!?IPSEPCOLA:out}-ipsepcola \
 	--with%{!?LASI:out}-lasi \
 	--with%{!?MING:out}-ming \
-	--with%{!?SMYRNA:out}-smyrna \
-	--with%{!?SFDP:out}-sfdp \
-	--with%{!?GLITZ:out}-glitz \
 	--with%{!?PANGOCAIRO:out}-pangocairo \
 	--with%{!?RSVG:out}-rsvg \
-	--with%{!?GDK_PIXBUF:out}-gdk-pixbuf
+	--with%{!?SFDP:out}-sfdp \
+	--with%{!?SMYRNA:out}-smyrna
 make %{?_smp_mflags}
 
 %install
