--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,13 +1,9 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-GRAPH_DIRS = circogen dotgen fdpgen neatogen twopigen
-
-CGRAPH_DIRS = circogen_cgraph dotgen_cgraph \
-	fdpgen_cgraph neatogen_cgraph twopigen_cgraph
-
-SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast vpsc \
-	rbtree sparse sfdpgen patchwork expr common \
-	pack gvc xdot ingraphs topfish glcomp $(GRAPH_DIRS) $(CGRAPH_DIRS)
+SUBDIRS = cdt graph cgraph gd pathplan sfio vmalloc ast \
+	vpsc rbtree sparse patchwork expr common \
+	pack gvc xdot ingraphs topfish glcomp \
+	circogen dotgen fdpgen neatogen twopigen sfdpgen
 
 EXTRA_DIST = Makefile.old
