--- a/lib/gvc/Makefile.am
+++ b/lib/gvc/Makefile.am
@@ -49,10 +49,14 @@ pdf_DATA = gvc.3.pdf
 libgvc_C_la_SOURCES = gvrender.c gvlayout.c gvdevice.c gvloadimage.c \
 	gvcontext.c gvjobs.c gvevent.c gvplugin.c gvconfig.c \
 	gvtextlayout.c gvusershape.c gvc.c
-libgvc_C_la_LIBADD = $(top_builddir)/lib/common/libcommon_C.la \
-	$(top_builddir)/lib/pack/libpack_C.la
-libgvc_C_la_DEPENDENCIES = $(top_builddir)/lib/rbtree/librbtree_C.la \
-	$(top_builddir)/lib/pack/libpack_C.la
+libgvc_C_la_LIBADD = \
+	$(top_builddir)/lib/rbtree/librbtree_C.la \
+	$(top_builddir)/lib/pack/libpack_C.la \
+	$(top_builddir)/lib/common/libcommon_C.la
+libgvc_C_la_DEPENDENCIES = \
+	$(top_builddir)/lib/rbtree/librbtree_C.la \
+	$(top_builddir)/lib/pack/libpack_C.la \
+	$(top_builddir)/lib/common/libcommon_C.la
 #For use with plugins.
 #   so it is linked with an empty table of builtins.
 libgvc_la_LDFLAGS = -version-info $(VERSION_INFO) -no-undefined
