--- a/lib/fdpgen/Makefile.am
+++ b/lib/fdpgen/Makefile.am
@@ -1,6 +1,12 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
+if WITH_CGRAPH
+GRAPH = cgraph
+else
+GRAPH = graph
+endif
+
 AM_CPPFLAGS = \
         -I$(top_srcdir) \
         -I$(top_srcdir)/lib/common \
@@ -8,15 +14,12 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/neatogen \
         -I$(top_srcdir)/lib/pack \
         -I$(top_srcdir)/lib/pathplan \
-        -I$(top_srcdir)/lib/graph \
+        -I$(top_srcdir)/lib/$(GRAPH) \
         -I$(top_srcdir)/lib/cdt
 
-if WITH_CGRAPH
-else
 noinst_HEADERS = comp.h dbg.h fdp.h grid.h tlayout.h xlayout.h \
 	clusteredges.h
 noinst_LTLIBRARIES = libfdpgen_C.la
-endif
 
 libfdpgen_C_la_SOURCES = comp.c dbg.c grid.c fdpinit.c layout.c \
 	tlayout.c xlayout.c clusteredges.c
