--- a/lib/twopigen/Makefile.am
+++ b/lib/twopigen/Makefile.am
@@ -1,6 +1,12 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
+if WITH_CGRAPH
+GRAPH = cgraph
+else
+GRAPH = graph
+endif
+
 AM_CPPFLAGS = \
         -I$(top_srcdir) \
         -I$(top_srcdir)/lib/common \
@@ -8,14 +14,11 @@ AM_CPPFLAGS = \
 	-I$(top_srcdir)/lib/neatogen \
 	-I$(top_srcdir)/lib/pack \
 	-I$(top_srcdir)/lib/pathplan \
-	-I$(top_srcdir)/lib/graph \
+	-I$(top_srcdir)/lib/$(GRAPH) \
 	-I$(top_srcdir)/lib/cdt
 
-if WITH_CGRAPH
-else
 noinst_HEADERS = circle.h
 noinst_LTLIBRARIES = libtwopigen_C.la
-endif
 
 libtwopigen_C_la_SOURCES = twopiinit.c circle.c
 
