--- a/doc/infosrc/Makefile.old
+++ b/doc/infosrc/Makefile.old
@@ -4,6 +4,8 @@
 # Required tools: cc, dot, awk, ksh, yacc, gs.
 #  gs and awk are used in ps_to_jpg.sh
 #  dot is used in mkarrows.sh and mkshapes.sh
+#  ps_to_png.sh and other make rules rely on netpbm tools 
+#  and ps2raster, which is part of the GMT library.
 #
 # The main product are 7 web pages:
 #    arrows.html  - arrow_grammar
@@ -27,7 +29,7 @@ MGIF = constraint.gif record.gif html1.gif html2.gif fill.gif round.gif \
 
 MJPG = sdlshapes.jpg
 
-MPNG = sdlshapes.png
+MPNG = plugins.png sdlshapes.png
 
 SGIF = Mcircle.gif Mdiamond.gif Msquare.gif box.gif \
       circle.gif diamond.gif doublecircle.gif \
@@ -59,10 +61,13 @@ HTML = attrs.html colors.html command.html lang.html output.html shapes.html \
        arrows.html
 INSTALL_FILES = $(HTML) $(DOTS) $(SGIF) $(AGIF) $(A2GIF) $(MGIF) $(XGIF) $(MJPG) $(MPNG)
 
-.SUFFIXES: .gif .dot
+.SUFFIXES: .gv .gif .dot .png
 
 .dot.gif :
 	dot -Tgif -o $@ $<
+
+.gv.png :
+	dot -Tpng -o $@ $<
 
 all : $(HTML) $(GIF) $(MPNG) $(MJPG)
 
@@ -98,9 +103,10 @@ colors.html : colors.1 colors.n X11 brewer_colors mkcolors.awk brewer.awk
 	cat colors.n >> colors.html
 	rm -rf colortmp
 
-output.html : output.1 outputs mkoutput.sh
+output.html : output.1 output.2 outputs mkoutput.sh plugins.png
 	cat output.1 > output.html
 	./mkoutput.sh < outputs >> output.html
+	cat output.2 >> output.html
 
 html.html : html.1 html_grammar html.2 html.3 html1.gif html2.gif html3.gif html4.gif mklang
 	./mklang html_grammar gramtmp
@@ -161,12 +167,12 @@ distclean : clean
 
 EXTRA_DIST = $(XGIF) mklang.y mkarrows.sh mkattrs.sh mkshapes.sh \
              mktypes.sh mkarrowtbl.sh mkoutput.sh mkshhtml.sh \
-	     ps_to_jpg.sh ps_to_png.sh \
-             arrow_grammar grammar html_grammar shapelist attrs.1 colors.1 \
-             brewerlist colors.n output.1 html.1 html.2 html1.dot html.3 \
+	         ps_to_jpg.sh ps_to_png.sh arrow_grammar grammar html_grammar \
+             shapelist attrs.1 colors.1 brewerlist colors.n \
+             output.1 output.2 html.1 html.2 html1.dot html.3 \
              shapes.1 shapes.2 shapes.3 lang.1 lang.2 arrows.1 arrows.2 \
              brewer.awk brewer_colors m kcolors.awk sz.awk \
              colorlist.dot html1.dot html4.dot round.dot constraint.dot \
              html2.dot mrecord.dot sdlshapes.dot fill.dot html3.dot record.dot \
-             attrs types X11 outputs eqn.gif
+             attrs types X11 outputs eqn.gif plugins.gv
 
